--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
   </head>
   <body>
     <h1>Welcome to DonutWebUI<sup>BETA</sup></h1>
+    <p>-----------------------------------------------------</p>
+    <p><sup>START</sup></p>
   </body>
 </html>
