--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </title>
   </head>
   <body>
-    <h1>Welcome to DonutWebUI<sup>BETA</sup></h1>
+    <h1>Welcome <sub>DonutWebUI<sup>BETA</sup</sub></h1>
     <hr>
     <h1><sup>START</sup></h1>
   </body>
