--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
     <h1><i>Welcome</i><font color="green"> <sub> DonutWebUI<sup>BETA</sup</sub></font></h1>
     <hr>
-    <h1><sup>START</sup></h1>
+    <h1>Donut WebUI 2023</h1>
   </body>
 </html>
