--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </title>
   </head>
   <body>
-    <h1><i>Welcome</i><font color="green"> <sub> DonutWebUI<sup>BETA</sup</sub></font></h1>
+    <h1><i>Welcome</i><font color="green"> DonutWebUI<sup>BETA</sup></font></h1>
     <hr>
     <h1>Donut WebUI 2023</h1>
   </body>
