--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1><i>Welcome</i><font color="green"> DonutWebUI<sup>BETA</sup></font></h1>
     <hr>
     <h1>Donut WebUI 2023</h1>
+    <code>v1.101</code>
   </body>
 </html>
