--- a/index.html
+++ b/index.html
@@ -1,13 +1,85 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>
-      DonutWebUI
-    </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+    * {
+      box-sizing: border-box;
+    }
+    .menu {
+      float: left;
+      width: 20%;
+    }
+    .menuitem {
+      padding: 8px;
+      margin-top: 7px;
+      border-bottom: 1px solid #f1f1f1;
+    }
+    .main {
+      float: left;
+      width: 60%;
+      padding: 0 20px;
+      overflow: hidden;
+    }
+    .right {
+      background-color: lightblue;
+      float: left;
+      width: 20%;
+      padding: 10px 15px;
+      margin-top: 7px;
+    }
+    
+    @media only screen and (max-width:800px) {
+      /* For tablets: */
+      .main {
+        width: 80%;
+        padding: 0;
+      }
+      .right {
+        width: 100%;
+      }
+    }
+    @media only screen and (max-width:500px) {
+      /* For mobile phones: */
+      .menu, .main, .right {
+        width: 100%;
+      }
+    }
+    </style>
   </head>
-  <body>
-    <h1><i>Welcome</i><font color="green"> DonutWebUI<sup>BETA</sup></font></h1>
-    <hr>
+  <body style="font-family:Verdana;">
+  
+  <div style="background-color:#f1f1f1;padding:15px;">
     <h1>Donut WebUI 2023</h1>
-    <code>v1.101</code>
+    <h3>BETA</h3>
+  </div>
+  
+  <div style="overflow:auto">
+    <div class="menu">
+      <div class="menuitem">•</div>
+      <div class="menuitem">•</div>
+      <div class="menuitem">•</div>
+      <div class="menuitem">•</div>
+    </div>
+  
+    <div class="main">
+      <h2>•</h2>
+      <p>•••••••••••••••••••••••••••••••</p>
+      <img src="img_5terre.jpg" style="width:100%">
+    </div>
+  
+    <div class="right">
+      <h2>•</h2>
+      <p>••••••••••••••••••••••••••••••••</p>
+      <h2>•</h2>
+      <p>••••••••••••••••••••••••••••••••</p>
+      <h2>•</h2>
+      <p>••••••••••••••••••••••••••••••••</p>
+    </div>
+  </div>
+  
+  
+  <div style="background-color:#f1f1f1;text-align:center;padding:10px;margin-top:7px;font-size:12px;"> Donut Software by Gautham Nair</div>
+  
   </body>
 </html>
