--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
   <body style="font-family:Verdana;">
   
   <div style="background-color:#f1f1f1;padding:15px;">
-    <h1>Donut WebUI 2023</h1>
-    <h3>BETA</h3>
+    <h1>Donut WebUI 2023 <sup>BETA</sup></h1>
   </div>
   
   <div style="overflow:auto">
