--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Donut WebUI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
     * {
@@ -64,7 +65,7 @@
     <div class="main">
       <h2>•</h2>
       <p>•••••••••••••••••••••••••••••••</p>
-      <img src="img_5terre.jpg" style="width:100%">
+      /*<img src="img_5terre.jpg" style="width:100%">*/
     </div>
   
     <div class="right">
