--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     }
     .right {
       background-color: lightblue;
-      float: left;
+      float: right;
       width: 20%;
       padding: 10px 15px;
       margin-top: 7px;
