--- a/index.html
+++ b/index.html
@@ -56,24 +56,24 @@
   
   <div style="overflow:auto">
     <div class="menu">
-      <div class="menuitem">•</div>
-      <div class="menuitem">•</div>
+      <div class="menuitem">Home</div>
+      <div class="menuitem">Settings</div>
       <div class="menuitem">•</div>
       <div class="menuitem">•</div>
     </div>
   
     <div class="main">
-      <h2>•</h2>
-      <p>•••••••••••••••••••••••••••••••</p>
+      <h2>Home</h2>
+      <p>Home will be fully functional after Beta 7</p>
     </div>
   
     <div class="right">
-      <h2>•</h2>
+      <h2>Date & Time</h2>
       <p>••••••••••••••••••••••••••••••••</p>
-      <h2>•</h2>
-      <p>••••••••••••••••••••••••••••••••</p>
-      <h2>•</h2>
-      <p>••••••••••••••••••••••••••••••••</p>
+      <h2>Operating System</h2>
+      <p>DonutOS BeggorraBear 1.1</p>
+      <h2>UI</h2>
+      <p>Donut WebUI 2023</p>
     </div>
   </div>
   
