--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ footer {
   
   <article>
     <h1>Note!</h1>
-    <p>The System will be functional after Beta 7 Update</p>p>
+    <p>The System will be functional after Beta 7 Update</p>
   </article>
 </section>
 
