--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
 header {
   background-color: #666;
   padding: 12px;
-  text-align: center;
+  text-align: left;
   font-size: 20px;
   color: white;
 }
