--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@ footer {
   <article>
     <h1>Note!</h1>
     <p>The System will be functional after Beta 7 Update</p>
+    <p>Donut WebUI 2023 on DonutOS BeggorraBear 1.1</p>
+    <code>2023.6.19.17.19.lab0.donutmain.donut.ggn</code>
   </article>
 </section>
 
