--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="#">Home</a></li>
+      <li>Home</li>
       <li><a href="#">System</a></li>
       <li><a href="#">Apps</a></li>
     </ul>
