--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@ footer {
   <nav>
     <ul>
       <li>Home</li>
-      <li><a href="#">System</a></li>
-      <li><a href="#">Apps</a></li>
+      <li><a href="system_view.html">System</a></li>
+      <li><a href="apps.html">Apps</a></li>
     </ul>
   </nav>
   
