--- a/apps.html
+++ b/apps.html
@@ -79,7 +79,7 @@ footer {
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="system_view.html">System</li>
+      <li><a href="system_view.html">System</a></li>
       <li>Apps</li>
     </ul>
   </nav>
