--- a/index.html
+++ b/index.html
@@ -85,10 +85,11 @@ footer {
   </nav>
   
   <article>
+    <p style="background-image: url('image.file_extension');">
     <h1>Note!</h1>
     <p>The System will be functional after Beta 7 Update</p>
     <p>Donut WebUI 2023 on DonutOS BeggorraBear 1.1</p>
-    <code>2023.6.19.17.19.lab0.donutmain.donut.ggn</code>
+    <code>Beta 2 Update 2023.6.24.10.53.lab0.donutmain.donut.ggn</code>
   </article>
 </section>
 
