--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ footer {
   </nav>
   
   <article>
-    <p style="background-image: url('image.file_extension');">
+    <p style="background-image: url('R.jpg');">
     <h1>Note!</h1>
     <p>The System will be functional after Beta 7 Update</p>
     <p>Donut WebUI 2023 on DonutOS BeggorraBear 1.1</p>
