--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ article {
   -webkit-flex: 3;
   -ms-flex: 3;
   flex: 3;
-  background-color: #f1f1f1;
+  background-image: url('R.jpg');
   padding: 10px;
 }
 
@@ -85,7 +85,6 @@ footer {
   </nav>
   
   <article>
-    <p style="background-image: url('R.jpg');">
     <h1>Note!</h1>
     <p>The System will be functional after Beta 7 Update</p>
     <p>Donut WebUI 2023 on DonutOS BeggorraBear 1.1</p>
