--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>DonutWebUI23 | DonutOS BeggorraBear 1.1</title>
+<title>DonutWebUI23 | DonutOS Web BeggorraBear 1.1</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -15,7 +15,7 @@ body {
 
 /* Style the header */
 header {
-  background-color: #666;
+  background-image: url('R.jpg');
   padding: 12px;
   text-align: left;
   font-size: 20px;
