--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
 
 /* Style the header */
 header {
-  background-image: url('R.jpg');
+  background-image: url('Download.jpg');
   padding: 12px;
   text-align: left;
   font-size: 20px;
@@ -33,7 +33,7 @@ nav {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  background: #ccc;
+  background-image: url('Download.jpg');
   padding: 2px;
 }
 
