--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ header {
   padding: 12px;
   text-align: left;
   font-size: 20px;
-  color: black;
+  color: white;
 }
 
 /* Container for flexboxes */
