--- a/index.html
+++ b/index.html
@@ -71,14 +71,11 @@ footer {
 </head>
 <body>
 
-<header>
-  <h2>DonutOS | Home</h2>
-</header>
 
 <section>
   <nav>
     <ul>
-      <li>Home</li>
+      <li><h1>DonutOS | Homw</h1></li>
       <li><a href="system_view.html">System</a></li>
       <li><a href="apps.html">Apps</a></li>
     </ul>
