--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><h1>DonutOS | Homw</h1></li>
+      <li><h1>DonutOS | Home</h1></li>
       <li><a href="system_view.html">System</a></li>
       <li><a href="apps.html">Apps</a></li>
     </ul>
