--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ nav {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  background-image: url('download.jpg');
+  background-image: url('');
   padding: 2px;
 }
 
