--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ nav {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  background-image: url('');
-  padding: 2px;
+  background-image: url('Download.jpg');
+  padding: 0px;
 }
 
 /* Style the list inside the menu */
