--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@ footer {
 
   
   
-  <article>
+    <img src="R.jpg" alt="Wallpaper">
     <h1>Note!</h1>
     <p>The System will be functional after Beta 7 Update</p>
     <p>Donut WebUI 2023 on DonutOS BeggorraBear 1.1</p>
     <code>Beta 2 Update 2023.6.24.10.53.lab0.donutmain.donut.ggn</code>
-  </article>
+  
 
 
 <footer>
