--- a/index.html
+++ b/index.html
@@ -75,11 +75,17 @@ footer {
 
   
   
-    <img src="R.jpg" alt="Wallpaper">
+    <div class="container">
+  <img src="img_snow_wide.jpg" alt="Snow" style="width:100%;">
+  <div class="top-left"><h1>Note!</h1><p>The system will be functional after Beta 7 Update</p></div>
+  <div class="top-right">Top Right</div>
+  <div class="bottom-right"><code>Beta 2 Update 2023.6.24.10.53.lab0.donutmain.donut.ggn</code>t</div>
+  <div class="centered">Centered</div>
+</div>
     <h1>Note!</h1>
     <p>The System will be functional after Beta 7 Update</p>
     <p>Donut WebUI 2023 on DonutOS BeggorraBear 1.1</p>
-    <code>Beta 2 Update 2023.6.24.10.53.lab0.donutmain.donut.ggn</code>
+    
   
 
 
