--- a/index.html
+++ b/index.html
@@ -1,96 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<title>DonutWebUI23 | DonutOS Web BeggorraBear 1.1</title>
-<meta charset="utf-8">
+<html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-* {
-  box-sizing: border-box;
+body {margin:0;}
+
+.icon-bar {
+  width: 100%;
+  background-color: #555;
+  overflow: auto;
 }
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-/* Style the header */
-header {
-  background-image: url('download.jpg');
-  padding: 12px;
-  text-align: left;
-  font-size: 20px;
-  color: white;
-}
-
-/* Container for flexboxes */
-section {
-  display: -webkit-flex;
-  display: flex;
-}
-
-/* Style the navigation menu */
-nav {
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  background-image: url('Download.jpg');
-  padding: -12px;
-}
-
-/* Style the list inside the menu */
-nav ul {
-  list-style-type: none;
-  padding: 10;
-}
-
-/* Style the content */
-article {
-  -webkit-flex: 3;
-  -ms-flex: 3;
-  flex: 3;
-  background-image: url('R.jpg');
-  padding: 10px;
-}
-
-/* Style the footer */
-footer {
-  background-color: #777;
-  padding: 0px;
+.icon-bar a {
+  float: left;
+  width: 20%;
   text-align: center;
+  padding: 12px 0;
+  transition: all 0.3s ease;
   color: white;
+  font-size: 36px;
 }
 
-/* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
-@media (max-width: 300px) {
-  section {
-    -webkit-flex-direction: column;
-    flex-direction: column;
-  }
+.icon-bar a:hover {
+  background-color: #000;
+}
+
+.active {
+  background-color: #04AA6D;
 }
 </style>
-</head>
 <body>
 
-
-
-  
-  
-    <div class="container">
-  <img src="R.jpg" alt="Wallpaper" style="width:100%;">
-  <div class="top-left"><h1>Note!</h1><p>The system will be functional after Beta 7 Update</p></div>
-
-  <div class="bottom-right"><code>Beta 2 Update 2023.6.24.10.53.lab0.donutmain.donut.ggn</code>t</div>
-
+<div class="icon-bar">
+  <a class="active" href="#"><i class="fa fa-home"></i></a>
+  <a href="#"><i class="fa fa-globe"></i></a> 
 </div>
-    
-    
-  
-
-
-<footer>
-  <p>Donut Open Source Software Project - <b>Gautham Nair</b></p>
-</footer>
-
+<h1>Note!</h1>
+  <p>The system will be functional after Beta 7 Update</p>
+  <code>2023.06.24.18.44.lab0.donutwuimain.donut.ggn</code>
 </body>
-</html>
-
+</html> 
