--- a/index.html
+++ b/index.html
@@ -1,42 +1,100 @@
 <!DOCTYPE html>
 <html>
+<head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-body {margin:0;}
+* {box-sizing: border-box}
+body {font-family: "Lato", sans-serif;}
 
-.icon-bar {
-  width: 100%;
-  background-color: #555;
-  overflow: auto;
-}
-
-.icon-bar a {
+/* Style the tab */
+.tab {
   float: left;
-  width: 20%;
-  text-align: center;
-  padding: 12px 0;
-  transition: all 0.3s ease;
-  color: white;
-  font-size: 36px;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+  width: 30%;
+  height: 300px;
 }
 
-.icon-bar a:hover {
-  background-color: #000;
+/* Style the buttons inside the tab */
+.tab button {
+  display: block;
+  background-color: inherit;
+  color: black;
+  padding: 22px 16px;
+  width: 100%;
+  border: none;
+  outline: none;
+  text-align: left;
+  cursor: pointer;
+  transition: 0.3s;
+  font-size: 17px;
 }
 
-.active {
-  background-color: #04AA6D;
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current "tab button" class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  float: left;
+  padding: 0px 12px;
+  border: 1px solid #ccc;
+  width: 70%;
+  border-left: none;
+  height: 300px;
 }
 </style>
+</head>
 <body>
 
-<div class="icon-bar">
-  <a class="active" href="#"><i class="fa fa-home"></i></a>
-  <a href="#"><i class="fa fa-globe"></i></a> 
+<h2>DonutWebUI</h2>
+
+<div class="tab">
+  <button class="tablinks" onclick="openCity(event, 'Home')" id="defaultOpen">Home</button>
+  <button class="tablinks" onclick="openCity(event, 'System')">System</button>
+  <button class="tablinks" onclick="openCity(event, 'Apps')">Apps</button>
 </div>
-<h1>Note!</h1>
-  <p>The system will be functional after Beta 7 Update</p>
-  <code>2023.06.24.18.44.lab0.donutwuimain.donut.ggn</code>
+
+<div id="Home" class="tabcontent">
+  <h3>Desktop</h3>
+  <p>Welcome to DonutWebUI</p>
+</div>
+
+<div id="System" class="tabcontent">
+  <h3>System</h3>
+  <p>DonutWebUI Beta 2</p>
+  <code>2023.06.24.18.52.lab0.dwui.donut.ggn</code>
+</div>
+
+<div id="Apps" class="tabcontent">
+  <h3>Apps</h3>
+  <p>Coming Soon</p>
+</div>
+
+<script>
+function openCity(evt, cityName) {
+  var i, tabcontent, tablinks;
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].className = tablinks[i].className.replace(" active", "");
+  }
+  document.getElementById(cityName).style.display = "block";
+  evt.currentTarget.className += " active";
+}
+
+// Get the element with id="defaultOpen" and click on it
+document.getElementById("defaultOpen").click();
+</script>
+   
 </body>
 </html> 
