--- a/index.html
+++ b/index.html
@@ -3,29 +3,23 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-* {box-sizing: border-box}
-body {font-family: "Lato", sans-serif;}
+body {font-family: Arial;}
 
 /* Style the tab */
 .tab {
-  float: left;
+  overflow: hidden;
   border: 1px solid #ccc;
   background-color: #f1f1f1;
-  width: 30%;
-  height: 300px;
 }
 
 /* Style the buttons inside the tab */
 .tab button {
-  display: block;
   background-color: inherit;
-  color: black;
-  padding: 22px 16px;
-  width: 100%;
+  float: left;
   border: none;
   outline: none;
-  text-align: left;
   cursor: pointer;
+  padding: 14px 16px;
   transition: 0.3s;
   font-size: 17px;
 }
@@ -35,50 +29,58 @@ body {font-family: "Lato", sans-serif;}
   background-color: #ddd;
 }
 
-/* Create an active/current "tab button" class */
+/* Create an active/current tablink class */
 .tab button.active {
   background-color: #ccc;
 }
 
 /* Style the tab content */
 .tabcontent {
-  float: left;
-  padding: 0px 12px;
+  display: none;
+  padding: 6px 12px;
   border: 1px solid #ccc;
-  width: 70%;
-  border-left: none;
-  height: 300px;
+  border-top: none;
 }
+
+/* Style the close button */
+.topright {
+  float: right;
+  cursor: pointer;
+  font-size: 28px;
+}
+
+.topright:hover {color: red;}
 </style>
 </head>
 <body>
 
-<h2>DonutWebUI</h2>
 
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'Home')" id="defaultOpen">Home</button>
-  <button class="tablinks" onclick="openCity(event, 'System')">System</button>
-  <button class="tablinks" onclick="openCity(event, 'Apps')">Apps</button>
+  <button class="tablinks" onclick="openMenu(event, 'Desktop')" id="defaultOpen">Desktop</button>
+  <button class="tablinks" onclick="openMenu(event, 'System')">System</button>
+  <button class="tablinks" onclick="openMenu(event, 'Apps')">Apps</button>
 </div>
 
-<div id="Home" class="tabcontent">
-  <h3>Desktop</h3>
-  <p>Welcome to DonutWebUI</p>
+<div id="Desktop" class="tabcontent">
+  <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
+  <img src="Download.jpg">
 </div>
 
 <div id="System" class="tabcontent">
+  <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h3>System</h3>
-  <p>DonutWebUI Beta 2</p>
-  <code>2023.06.24.18.52.lab0.dwui.donut.ggn</code>
+  <p><b>Donut</b>WebUI</p>
+  <code>2023.06.24.19.20.lab0.dwui.donut.ggn</code>
 </div>
 
 <div id="Apps" class="tabcontent">
+  <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h3>Apps</h3>
-  <p>Coming Soon</p>
+  <p>Coming Soon..!</p>
 </div>
 
 <script>
-function openCity(evt, cityName) {
+function openMenu(evt, tabName) {
   var i, tabcontent, tablinks;
   tabcontent = document.getElementsByClassName("tabcontent");
   for (i = 0; i < tabcontent.length; i++) {
@@ -88,7 +90,7 @@ function openCity(evt, cityName) {
   for (i = 0; i < tablinks.length; i++) {
     tablinks[i].className = tablinks[i].className.replace(" active", "");
   }
-  document.getElementById(cityName).style.display = "block";
+  document.getElementById(tabName).style.display = "block";
   evt.currentTarget.className += " active";
 }
 
