--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ body {font-family: Arial;}
 
 <div id="Desktop" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
-  <img src="Download.jpg">
+  <img src="download.jpg">
 </div>
 
 <div id="System" class="tabcontent">
