--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ body {font-family: Arial;}
 
 
 <div class="tab">
+  <p><b>Donut</b>WebUI</p>
   <button class="tablinks" onclick="openMenu(event, 'Desktop')" id="defaultOpen">Desktop</button>
   <button class="tablinks" onclick="openMenu(event, 'System')">System</button>
   <button class="tablinks" onclick="openMenu(event, 'Apps')">Apps</button>
