--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body {font-family: Arial;}
 <div id="System" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h3>System</h3>
-  <p><b>Donut</b>WebUI</p>
+  <p>📀<b>Donut</b>WebUI</p>
   <p>Update 2 2K23</p>
   <code>2023.06.24.19.20.lab0.dwui.donut.ggn</code>
 </div>
