--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ body {font-family: Arial;}
 
 
 <div class="tab">
-  <p>📀<b>Donut</b>WebUI</p>
+  <p>📀<b>Donut</b>WebUI<sup>BETA</sup></p>
   <button class="tablinks" onclick="openMenu(event, 'Desktop')" id="defaultOpen">Desktop</button>
   <button class="tablinks" onclick="openMenu(event, 'System')">System</button>
   <button class="tablinks" onclick="openMenu(event, 'Apps')">Apps</button>
@@ -70,7 +70,7 @@ body {font-family: Arial;}
 <div id="System" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h3>System</h3>
-  <p>📀<b>Donut</b>WebUI</p>
+  <p>📀<b>Donut</b>WebUI<sup>BETA</sup></p>
   <p>Update 2 2K23</p>
   <code>2023.06.24.19.20.lab0.dwui.donut.ggn</code>
 </div>
