--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {font-family: Arial;}
-
+background-image: src="download.html";
 /* Style the tab */
 .tab {
   overflow: hidden;
