--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@ body {font-family: Arial;}
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>System</h1>
   <h1>📀</h1><p><b>Donut</b>WebUI<sup>BETA</sup></p>
-  <p>Update 2 2K23</p>
-  <code>2023.06.24.19.20.lab0.dwui.donut.ggn</code>
+  <p>Update 3 2K23</p>
+  <code>2023.06.26.17.57.lab0.dwui.donut.ggn</code>
 </div>
 
 <div id="Apps" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>Apps</h1>
-  <h1>🌐 🎮</h1>
+  <h1><button onclick="browser.html">🌐</button> 🎮</h1>
 </div>
 
 <script>
