--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body {font-family: Arial;}
 <div id="Apps" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>Apps</h1>
-  <h1><button onclick="browser.html">🌐</button> 🎮</h1>
+  <h1><a href="browser.html"> <button>🌐</button> </a>  <a href="browser.html"> <button>🎮</button> </a></h1>
 </div>
 
 <script>
