--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body {font-family: Arial;}
 <div id="Apps" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>Apps</h1>
-  <a href="browser.html"> <button style="height:200px;width:200px">🌐</button> </a>  <a href="games.html"> <button style="height:200px;width:200px">🎮</button> </a>
+  <a href="browser.html"> <button style="height:200px;width:200px"><h1>🌐</h1></button> </a>  <a href="games.html"> <button style="height:200px;width:200px"><h1>🎮</h1></button> </a>
 </div>
 
 <script>
