--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body {font-family: Arial;}
 <div id="System" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>System</h1>
-  <h1>📀</h1><p><b>Donut</b>WebUI<sup>BETA</sup></p>
+  <h1>📀</h1><p><b>Donut</b>WebUI<sup>Codename Mavara Para</sup></p>
   <p>Update 3 2K23</p>
   <code>2023.06.26.17.57.lab0.dwui.donut.ggn</code>
 </div>
@@ -77,7 +77,7 @@ body {font-family: Arial;}
 <div id="Apps" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>Apps</h1>
-  <a href="browser.html"> <button style="height:200px;width:200px"><h1>🌐</h1></button> </a>  <a href="games.html"> <button style="height:200px;width:200px"><h1>🎮</h1></button> </a>
+  <a href="browser.html"> <button style="height:200px;width:200px"><h1>🌐</h1></button> </a> <p> Test Interface</p>  <a href="games.html"> <button style="height:200px;width:200px"><h1>🎮</h1></button> </a>
 </div>
 
 <script>
