--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Donut WebUI Mavara Para | DonutOS Web 1.1 BB</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {font-family: Arial;}
@@ -55,7 +56,7 @@ body {font-family: Arial;}
 
 
 <div class="tab">
-  <p>📀<b>Donut</b>WebUI<sup>BETA</sup></p>
+  <p>📀<b>Donut</b>WebUI<sup>Codename Mavara Para</sup></p>
   <button class="tablinks" onclick="openMenu(event, 'Desktop')" id="defaultOpen">Desktop</button>
   <button class="tablinks" onclick="openMenu(event, 'System')">System</button>
   <button class="tablinks" onclick="openMenu(event, 'Apps')">Apps</button>
