--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@ body {font-family: Arial;}
   <h1>📀</h1><p><b>Donut</b>WebUI<sup>Codename Mavara Para</sup></p>
   <p>Update 3 2K23</p>
   <code>2023.06.26.17.57.lab0.dwui.donut.ggn</code>
+  <code>DonutOS Web 1.1 BB</code>
+  <code>DHTMLK v23.06.00.123+</code>
 </div>
 
 <div id="Apps" class="tabcontent">
