--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@ body {font-family: Arial;}
 <div id="Desktop" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <img src="download.jpg">
+  <img src="R.jpg">
+  <img src="RE4wtd3.jpg">
 </div>
 
 <div id="System" class="tabcontent">
@@ -80,7 +82,7 @@ body {font-family: Arial;}
 <div id="Apps" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>Apps</h1>
-  <a href="browser.html"> <button style="height:200px;width:200px"><h1>🌐</h1></button> </a> <a href="games.html"> <button style="height:200px;width:200px"><h1>🎮</h1></button> </a> <a href="test.html"> <button style="height:200px;width:200px"><h1>📁</h1></button> </a>
+  <a href="browser.html"> <button style="height:200px;width:200px"><h1>🌐</h1></button> </a> <a href="games.html"> <button style="height:200px;width:200px"><h1>🎮</h1></button> </a>
 </div>
 
 <script>
