--- a/browser.html
+++ b/browser.html
@@ -1,7 +1,58 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>Browser</title>
+  <title>Donut Browser Mavara Para</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.menu {
+  float: left;
+  width: 20%;
+  text-align: center;
+}
+
+.menu a {
+  background-color: #e5e5e5;
+  padding: 8px;
+  margin-top: 7px;
+  display: block;
+  width: 100%;
+  color: black;
+}
+
+.main {
+  float: left;
+  width: 60%;
+  padding: 0 20px;
+}
+
+.right {
+  background-color: #e5e5e5;
+  float: left;
+  width: 20%;
+  padding: 15px;
+  margin-top: 7px;
+  text-align: center;
+}
+
+@media only screen and (max-width: 620px) {
+  /* For mobile phones: */
+  .menu, .main, .right {
+    width: 100%;
+  }
+}
+</style>
 </head>
-<body>
-<h1><a href="index.html">⬅️</a> Browser</h1>
-<iframe src="https://bing.com" width="100%" height="900" style="border:none;"> </iframe>
+<body style="font-family:Verdana;color:#aaaaaa;">
+
+<div style="background-color:#e5e5e5;padding:15px;text-align:center;">
+  <h1><a href="index.html>⬅️</a> 🌐<sup>Codename Mavara Para</sup></h1>
+</div>
+
+<iframe src="https://bing.com/" style="height:600px;width:100%;" title="Browser"></iframe>
+</body>
+</html>
+
