--- a/browser.html
+++ b/browser.html
@@ -49,10 +49,13 @@
 <body style="font-family:Verdana;color:#aaaaaa;">
 
 <div style="background-color:#e5e5e5;padding:15px;text-align:center;">
-  <h1><a href="index.html>⬅️</a> 🌐<sup>Codename Mavara Para</sup></h1>
+  <h1><a href="index.html">⬅️</a> 🌐<sup>Codename Mavara Para</sup></h1>
 </div>
 
-<iframe src="https://bing.com/" style="height:600px;width:100%;" title="Browser"></iframe>
+<div style="padding:15px;text-align:center;">
+  <iframe src="https://bing.com/" style="height:600px;width:100%;" title="Browser"></iframe>
+</div>
+
 </body>
 </html>
 
