--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@ body {font-family: Arial;}
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>System</h1>
   <h1>📀</h1><p><b>Donut</b>WebUI<sup>Codename Mavara Para</sup></p>
-  <p>Update 3 2K23</p>
-  <code>2023.06.26.17.57.lab0.dwui.donut.ggn</code>
-  <code>DonutOS Web 1.1 BB</code>
-  <code>DHTMLK v23.06.00.123+</code>
+  <p>Update 4 2K23 R2</p>
+  <code>2023.06.27.08.54.lab0.dwui.donut.ggn</code>
+  <code>DonutOS Web 1.1 BB R2</code>
+  <code>DHTMLK v23.06.27.256+</code>
 </div>
 
 <div id="Apps" class="tabcontent">
