--- a/browser.html
+++ b/browser.html
@@ -53,7 +53,7 @@
 </div>
 
 <div style="padding:15px;text-align:center;">
-  <iframe src="https://bing.com/" style="height:600px;width:100%;" title="Browser"></iframe>
+  <iframe src="https://sites.google.com/view/donutlinux/start" style="height:600px;width:100%;" title="Browser"></iframe>
 </div>
 
 </body>
