--- a/browser.html
+++ b/browser.html
@@ -52,9 +52,9 @@
   <h1><a href="index.html">⬅️</a> 🌐<sup>Codename Mavara Para</sup></h1>
 </div>
 
-<div style="padding:15px;text-align:center;">
-  <iframe src="https://sites.google.com/view/donutlinux/start" style="height:600px;width:100%;" title="Browser"></iframe>
-</div>
+<script async src="https://cse.google.com/cse.js?cx=ee19ab206b28400bb">
+</script>
+<div class="gcse-search"></div>
 
 </body>
 </html>
