--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@ body {font-family: Arial;}
 
 <div id="Desktop" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
-  <img src="R.jpg">
-  <img src="RE4wtd3.jpg">
+  <span id="clock"></span>
 </div>
 
 <div id="System" class="tabcontent">
@@ -73,7 +72,7 @@ body {font-family: Arial;}
   <h1>System</h1>
   <h1>📀</h1><p><b>Donut</b>WebUI<sup>Codename Mavara Para</sup></p>
   <p>Update 4 2K23 R2</p>
-  <code>2023.06.27.08.54.lab0.dwui.donut.ggn</code>
+  <code>2023.06.27.11.19.lab0.dwui.donut.ggn</code>
   <code>DonutOS Web 1.1 BB R2</code>
   <code>DHTMLK v23.06.27.256+</code>
 </div>
@@ -101,6 +100,24 @@ function openMenu(evt, tabName) {
 
 // Get the element with id="defaultOpen" and click on it
 document.getElementById("defaultOpen").click();
+</script>
+<script type="text/javascript">
+    var clockElement = document.getElementById('clock');
+
+    function clock() {
+        var date = new Date();
+
+        // Replace '400px' below with where you want the format to change.
+        if (window.matchMedia('(max-width: 400px)').matches) {
+            // Use this format for windows with a width up to the value above.
+            clockElement.textContent = date.toLocaleString();
+        } else {
+            // While this format will be used for larger windows.
+            clockElement.textContent = date.toString();
+        }
+    }
+
+    setInterval(clock, 1000);
 </script>
    
 </body>
