--- a/index.html
+++ b/index.html
@@ -65,13 +65,14 @@ body {font-family: Arial;}
 <div id="Desktop" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <span id="clock"></span>
+  <p>/!\ This is a BETA version, i.e, some features might not work in this build, the system is expected to be stable with Update 7 or Update 8.!</p>
 </div>
 
 <div id="System" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>System</h1>
   <h1>📀</h1><p><b>Donut</b>WebUI<sup>Codename Mavara Para</sup></p>
-  <p>Update 4 2K23 R2</p>
+  <p>Update 5 2K23 R2</p>
   <code>2023.06.27.11.19.lab0.dwui.donut.ggn</code>
   <code>DonutOS Web 1.1 BB R2</code>
   <code>DHTMLK v23.06.27.256+</code>
