--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body {font-family: Arial;}
 
 <div class="tab">
   <p>📀<b>Donut</b>WebUI<sup>Codename Mavara Para</sup></p>
-  <button class="tablinks" onclick="openMenu(event, 'Desktop')" id="defaultOpen">Desktop</button>
+  <button class="tablinks" onclick="openMenu(event, 'Desktop')" id="defaultOpen">📀 Home</button>
   <button class="tablinks" onclick="openMenu(event, 'System')">System</button>
   <button class="tablinks" onclick="openMenu(event, 'Apps')">Apps</button>
 </div>
