--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ body {font-family: Arial;}
   <code>2023.06.27.11.19.lab0.dwui.donut.ggn</code>
   <code>DonutOS Web 1.1 BB R2</code>
   <code>DHTMLK v23.06.27.256+</code>
+  <p>Developed by Gautham Nair</p>
 </div>
 
 <div id="Apps" class="tabcontent">
