--- a/games.html
+++ b/games.html
@@ -3,5 +3,5 @@
 <title>Games</title>
 </head>
 <body>
-<h1><a href="index.html">⬅️</a> Games</h1>
+<h1><a style="text-decoration:none;"  href="index.html">⬅️</a> Games</h1>
 <p>Coming Sooooooooon>>!!</p>
