--- a/browser.html
+++ b/browser.html
@@ -48,7 +48,7 @@
 </head>
 <body style="font-family:Verdana;color:#aaaaaa;">
 
-<div style="background-color:#e5e5e5;padding:15px;text-align:center;">
+<div style="background-color:#e5e5e5;padding:15px;text-align:left;">
   <h1><a style="text-decoration:none;" href="index.html">⬅️</a> 🌐<sup>Codename Mavara Para</sup></h1>
 </div>
 
