--- a/browser.html
+++ b/browser.html
@@ -49,7 +49,7 @@
 <body style="font-family:Verdana;color:#aaaaaa;">
 
 <div style="background-color:#e5e5e5;padding:15px;text-align:left;">
-  <h1><a style="text-decoration:none;" href="index.html">⬅️</a> 🌐<sup>Codename Mavara Para</sup></h1>
+  <h1><a style="text-decoration:none;" href="index.html">⬅️</a> 🌐 Donut Browser</h1>
 </div>
 
 <script async src="https://cse.google.com/cse.js?cx=ee19ab206b28400bb">
