--- a/browser.html
+++ b/browser.html
@@ -46,9 +46,9 @@
 }
 </style>
 </head>
-<body style="font-family:Verdana;color:#aaaaaa;">
+<body style="font-family:Verdana;color:black;">
 
-<div style="background-color:#e5e5e5;padding:15px;text-align:left;">
+<div style="background-color:white;padding:1px;text-align:left;">
   <h1><a style="text-decoration:none;" href="index.html">⬅️</a> 🌐 Donut Browser</h1>
 </div>
 
