--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ body {font-family: Arial;}
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>System</h1>
   <h1>📀</h1><p><b>Donut</b>WebUI<sup>Codename Mavara Para</sup></p>
-  <p>Update 5 2K23 R2</p>
-  <code>2023.06.27.11.19.lab0.dwui.donut.ggn</code>
+  <p>Update 6 2K23 R2</p>
+  <code>2023.06.27.12.05.lab0.dwui.donut.ggn</code>
   <code>DonutOS Web 1.1 BB R2</code>
   <code>DHTMLK v23.06.27.256+</code>
   <p>Developed by Gautham Nair</p>
@@ -82,7 +82,7 @@ body {font-family: Arial;}
 <div id="Apps" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>Apps</h1>
-  <a style="text-decoration:none;" href="browser.html"> <button style="height:200px;width:200px"><h1 style="text-size:100px;">🌐</h1></button> </a> <a style="text-decoration:none;" href="games.html"> <button style="height:200px;width:200px"><h1>🎮</h1></button> </a>
+  <a style="text-decoration:none;" href="browser.html"> <button style="height:200px;width:200px"><h>🌐</h1></button> </a> <a style="text-decoration:none;" href="games.html"> <button style="height:200px;width:200px"><h1>🎮</h1></button> </a>
 </div>
 
 <script>
