--- a/games.html
+++ b/games.html
@@ -1,7 +1,57 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>Games</title>
+  <title>Donut Browser Mavara Para</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.menu {
+  float: left;
+  width: 20%;
+  text-align: center;
+}
+
+.menu a {
+  background-color: #e5e5e5;
+  padding: 8px;
+  margin-top: 7px;
+  display: block;
+  width: 100%;
+  color: black;
+}
+
+.main {
+  float: left;
+  width: 60%;
+  padding: 0 20px;
+}
+
+.right {
+  background-color: #e5e5e5;
+  float: left;
+  width: 20%;
+  padding: 15px;
+  margin-top: 7px;
+  text-align: center;
+}
+
+@media only screen and (max-width: 620px) {
+  /* For mobile phones: */
+  .menu, .main, .right {
+    width: 100%;
+  }
+}
+</style>
 </head>
-<body>
-<h1><a style="text-decoration:none;"  href="index.html">⬅️</a> Games</h1>
-<p>Coming Sooooooooon>>!!</p>
+<body style="font-family:Verdana;color:black;">
+
+<div style="background-color:white;padding:1px;text-align:left;">
+  <h1><a style="text-decoration:none;" href="index.html">⬅️</a> 🎮 Games</h1>
+</div>
+
+<p>Coming Soooooooooooooooooooooooooooooooon...!!</p>
+</body>
+</html>
