--- a/games.html
+++ b/games.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Donut Browser Mavara Para</title>
+  <title>Games</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 * {
