--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ body {font-family: Arial;}
   <code>2023.06.27.12.05.lab0.dwui.donut.ggn</code>
   <code>DonutOS Web 1.1 BB R2</code>
   <code>DHTMLK v23.06.27.256+</code>
+  <button style="height:50px;width:50px"><a style="text-decoration:none;" href="index.html">Check for Updates/Upgrades</a></button>
   <p>Developed by Gautham Nair</p>
 </div>
 
