--- a/games.html
+++ b/games.html
@@ -52,6 +52,6 @@
   <h1><a style="text-decoration:none;" href="index.html">⬅️</a> 🎮 Games</h1>
 </div>
 
-<p>Coming Soooooooooooooooooooooooooooooooon...!!</p>
+<a style="text-decoration:none;" href="tetris.html"> <button style="height:200px;width:200px"><h1>🎮</h1></button> </a>
 </body>
 </html>
