--- a/games.html
+++ b/games.html
@@ -52,6 +52,11 @@
   <h1><a style="text-decoration:none;" href="index.html">⬅️</a> 🎮 Games</h1>
 </div>
 
-<a style="text-decoration:none;" href="tetris.html"> <button style="height:200px;width:200px"><h1>🎮</h1></button> </a>
+<button type="button" class="collapsible">Tetris <a style="text-decorations:none;" href="tetris.html"><button>Play Now!</button></a></button>
+<div class="content">
+  <p>Tetris by <b>FRADAR</b></p>
+  <p><b>Availability :</b>Available/Free</p>
+  <a style="text-decorations:none;" href="tetris.html"><button>Play Now!</button></a>
+</div>
 </body>
 </html>
