--- a/games.html
+++ b/games.html
@@ -4,6 +4,28 @@
   <title>Games</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
+.collapsible {
+  background-color: #777;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.active, .collapsible:hover {
+  background-color: #555;
+}
+
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+}
 * {
   box-sizing: border-box;
 }
