--- a/games.html
+++ b/games.html
@@ -74,11 +74,12 @@
   <h1><a style="text-decoration:none;" href="index.html">⬅️</a> 🎮 Games</h1>
 </div>
 
-<button type="button" class="collapsible">Tetris <a style="text-decorations:none;" href="tetris.html"><button>Play Now!</button></a></button>
+<button type="button" class="collapsible">Tetris</button>
 <div class="content">
-  <p>Tetris by <b>FRADAR</b></p>
-  <p><b>Availability :</b>Available/Free</p>
+  <p>TETRIS by <b>FRADAR</b></p>
+  <p><b>Availability : </b>Available/Free</p>
   <a style="text-decorations:none;" href="tetris.html"><button>Play Now!</button></a>
+</div>
 </div>
 </body>
 </html>
