--- a/games.html
+++ b/games.html
@@ -80,6 +80,21 @@
   <p><b>Availability : </b>Available/Free</p>
   <a style="text-decorations:none;" href="tetris.html"><button>Play Now!</button></a>
 </div>
-</div>
+<script>
+var coll = document.getElementsByClassName("collapsible");
+var i;
+
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var content = this.nextElementSibling;
+    if (content.style.display === "block") {
+      content.style.display = "none";
+    } else {
+      content.style.display = "block";
+    }
+  });
+}
+</script>
 </body>
 </html>
