--- a/games.html
+++ b/games.html
@@ -74,7 +74,7 @@
   <h1><a style="text-decoration:none;" href="index.html">⬅️</a> 🎮 Games</h1>
 </div>
 
-<button type="button" class="collapsible">Tetris</button>
+<button type="button" class="collapsible">🧱 Tetris</button>
 <div class="content">
   <p>TETRIS by <b>FRADAR</b></p>
   <p><b>Availability : </b>Available/Free</p>
