--- a/games.html
+++ b/games.html
@@ -80,6 +80,12 @@
   <p><b>Availability : </b>Available/Free</p>
   <a style="text-decorations:none;" href="tetris.html"><button>Play Now!</button></a>
 </div>
+<button type="button" class="collapsible">🎾 Table Tennis 2D</button>
+<div class="content">
+  <p>Table Tennis 2D by <b>E and T Software</b></p>
+  <p><b>Availability : </b>Available/Free</p>
+  <a style="text-decorations:none;" href="tt2d.html"><button>Play Now!</button></a>
+</div>
 <script>
 var coll = document.getElementsByClassName("collapsible");
 var i;
