--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Donut WebUI Mavara Para | DonutOS Web 1.1 BB</title>
+<title>Donut WebUI MP  | DonutOS Web 1.1 BB</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {font-family: Arial;}
@@ -56,7 +56,7 @@ body {font-family: Arial;}
 
 
 <div class="tab">
-  <p>📀<b>Donut</b>WebUI<sup>Codename Mavara Para</sup></p>
+  <p>📀<b>Donut</b>WebUI<sup>MP</sup></p>
   <button class="tablinks" onclick="openMenu(event, 'Desktop')" id="defaultOpen">📀 Home</button>
   <button class="tablinks" onclick="openMenu(event, 'System')">System</button>
   <button class="tablinks" onclick="openMenu(event, 'Apps')">Apps</button>
@@ -71,9 +71,9 @@ body {font-family: Arial;}
 <div id="System" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>System</h1>
-  <h1>📀</h1><p><b>Donut</b>WebUI<sup>Codename Mavara Para</sup></p>
-  <p>Update 6.1 2K23 R2</p>
-  <code>2023.06.28.10.26.lab0.dwui.donut.ggn</code>
+  <h1>📀</h1><p><b>Donut</b>WebUI<sup>MP</sup></p>
+  <p>Update 6.2 2K23 R2</p>
+  <code>2023.06.28.14.26.lab0.dwui.donut.ggn</code>
   <code>DonutOS Web 1.1 BB R2</code>
   <code>DHTMLK v23.06.27.256+</code>
   <a style="text-decoration:none;" href="index.html"><button>Check for Updates/Upgrades</button></a>
