--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@ body {font-family: Arial;}
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>System</h1>
   <h1>📀</h1><p><b>Donut</b>WebUI<sup>MP</sup></p>
+  <p><img src="2021-04-16.jpg" alt="Mavara Para n Pandalam, Kerala, India>Mavara Para</p>
   <p>Update 6.2 2K23 R2</p>
-  <code>2023.06.28.14.26.lab0.dwui.donut.ggn</code>
-  <code>DonutOS Web 1.1 BB R2</code>
-  <code>DHTMLK v23.06.27.256+</code>
+  <p><code>2023.06.28.14.26.lab0.dwui.donut.ggn</code></p>
+  <p></p><code>DonutOS Web 1.1 BB R2</code></p>
+  <p></p><code>DHTMLK v23.06.27.256+</code></p>
   <a style="text-decoration:none;" href="index.html"><button>Check for Updates/Upgrades</button></a>
   <p>Developed by Gautham Nair</p>
 </div>
