--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ body {font-family: Arial;}
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>System</h1>
   <h1>📀</h1><p><b>Donut</b>WebUI<sup>MP</sup></p>
+  <p><img src="2021-04-16.jpg" alt="Mavara Para" width="100" height="100"></p>
   <p>Mavara Para</p>
   <p>Update 6.2 2K23 R2</p>
   <p><code>2023.06.28.14.26.lab0.dwui.donut.ggn</code></p>
