--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@ body {font-family: Arial;}
   <p><img src="2021-04-16.jpg" alt="Mavara Para" width="100" height="100"></p>
   <p>Mavara Para</p>
   <p>Update 6.2 2K23 R2</p>
-  <p><code>2023.06.28.14.26.lab0.dwui.donut.ggn</code></p>
-  <p><code>DonutOS Web 1.1 BB R2</code></p>
-  <p><code>DHTMLK v23.06.27.256+</code></p>
+  <p><code>2023.06.28.14.26.lab0.dwui.donut.ggn</code> <code>DonutOS Web 1.1 BB R2</code> <code>DHTMLK v23.06.27.256+</code></p>
   <p><a style="text-decoration:none;" href="index.html"><button>Check for Updates/Upgrades</button></a></p>
   <p>Developed by Gautham Nair</p>
 </div>
