--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body {font-family: Arial;}
 <div id="Desktop" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <span id="clock"></span>
-  <p>/!\ This is a BETA version, i.e, some features might not work in this build, the system is expected to be stable with Update 7 or Update 8.!</p>
+  <p>/!\ This is a BETA version, i.e, some features might not work in this build, the system will be stable with Update 7, expected to release on 1 July 2023.!</p>
 </div>
 
 <div id="System" class="tabcontent">
@@ -74,8 +74,8 @@ body {font-family: Arial;}
   <h1>📀</h1><p><b>Donut</b>WebUI<sup>MP</sup></p>
   <p><img src="2021-04-16.jpg" alt="Mavara Para" width="100" height="100"></p>
   <p>Mavara Para</p>
-  <p>Update 6.2 2K23 R2</p>
-  <p><code>2023.06.28.14.26.lab0.dwui.donut.ggn</code> <code>DonutOS Web 1.1 BB R2</code> <code>DHTMLK v23.06.27.256+</code></p>
+  <p>Update 6.3 2K23 R2</p>
+  <p><code>2023.06.29.01.01.lab0.dwui.donut.ggn</code> <code>DonutOS Web 1.1 BB R2</code> <code>DHTMLK v23.06.27.256+</code></p>
   <p><a style="text-decoration:none;" href="index.html"><button>Check for Updates/Upgrades</button></a></p>
   <p>Developed by Gautham Nair</p>
 </div>
