--- a/browser.html
+++ b/browser.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Donut Browser Mavara Para</title>
+  <title>Donut Browser MP</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 * {
@@ -49,7 +49,7 @@
 <body style="font-family:Verdana;color:black;">
 
 <div style="background-color:white;padding:1px;text-align:left;">
-  <h1><a style="text-decoration:none;" href="index.html">⬅️</a> 🌐 Donut Browser</h1>
+  <h1><a style="text-decoration:none;" href="index.html">⬅️</a> 🌐 Donut Browser<sup>MP</sup></h1>
 </div>
 
 <script async src="https://cse.google.com/cse.js?cx=ee19ab206b28400bb">
