--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@ body {font-family: Arial;}
   <h1>📀</h1><p><b>Donut</b>WebUI<sup>MP</sup></p>
   <p><img src="2021-04-16.jpg" alt="Mavara Para" width="100" height="100"></p>
   <p>Mavara Para</p>
-  <p>Update 6.5 2K23 R2</p>
+  <p>Update 6.6 2K23 R2</p>
   <p><code>Build 2306.29</code> <code>DonutOS Web 1.1 BB R2</code> <code>DHTMLK v23.06.27.256+</code></p>
   <button type="button" class="collapsible">What's New?</button>
   <div class="content">
-  <p>1. Updated Interface</p>
+  <p>1. Added Copy's v86 Web Virtualization</p>
   <p>2. Fixed known bugs</p>
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button>Check for Updates/Upgrades</button></a></p>
@@ -113,7 +113,7 @@ body {font-family: Arial;}
 <div id="Apps" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>Apps</h1>
-  <a style="text-decoration:none;" href="browser.html"> <button style="height:200px;width:200px"><h1>🌐</h1></button> </a> <a style="text-decoration:none;" href="games.html"> <button style="height:200px;width:200px"><h1>🎮</h1></button> </a>
+  <a style="text-decoration:none;" href="browser.html"> <button style="height:200px;width:200px"><h1>🌐</h1></button> </a> <a style="text-decoration:none;" href="games.html"> <button style="height:200px;width:200px"><h1>🎮</h1></button> </a> <a style="text-decoration:none;" href="copyv86.html"> <button style="height:200px;width:200px"><h1>🖥️</h1></button> </a>
 </div>
 
 <script>
