--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ body {font-family: Arial;}
   <p><code>Build 2306.30</code> <code>DonutOS Web 1.1 BB R2</code> <code>DHTMLK v23.06.27.256+</code></p>
   <button type="button" class="collapsible">What's New?</button>
   <div class="content">
-  <p>1. Fixed Donut WVM broken link</p>
-  <p>2. Fixed known bugs</p>
+    <p>1. Checked for bugs</p>
+    <p>2. Will receive Update 6.9, which is stable release preview</p>
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button>Check for Updates/Upgrades</button></a></p>
   <p>Developed by Gautham Nair</p>
