--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@ body {font-family: Arial;}
   <h1>📀</h1><p><b>Donut</b>WebUI<sup>MP</sup></p>
   <p><img src="2021-04-16.jpg" alt="Mavara Para" width="100" height="100"></p>
   <p>Mavara Para</p>
-  <p>Update 6.7 2K23 R2</p>
+  <p>Update 6.9 2K23 R2</p>
   <p><code>Build 2306.30</code> <code>DonutOS Web 1.1 BB R2</code> <code>DHTMLK v23.06.27.256+</code></p>
   <button type="button" class="collapsible">What's New?</button>
   <div class="content">
-    <p>1. Checked for bugs</p>
-    <p>2. Will receive Update 6.9, which is stable release preview</p>
+    <p>1. Stable and preview released</p>
+    <p>2. Almost stable, there can be only a very few unimportant bugs</p>
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button>Check for Updates/Upgrades</button></a></p>
   <p>Developed by Gautham Nair</p>
