--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body {font-family: Arial;}
 <div id="Desktop" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <span id="clock"></span>
-  <p>/!\ This is a BETA version, i.e, some features might not work in this build, the system will be stable with Update 7, expected to release on 1 July 2023.!</p>
+  <p>/!\ Release Preview, the system will be fully stable and marked for production with Update 7, which will be released tomorrow</p>
 </div>
 
 <div id="System" class="tabcontent">
