--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body {font-family: Arial;}
 <div id="Desktop" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <span id="clock"></span>
-  <p>/!\ Release Preview, the system will be fully stable and marked for production with Update 7, which will be released tomorrow</p>
+  <p>Welcome to DonutWebUI<sup>MP</sup></p>
 </div>
 
 <div id="System" class="tabcontent">
@@ -99,12 +99,11 @@ body {font-family: Arial;}
   <h1>📀</h1><p><b>Donut</b>WebUI<sup>MP</sup></p>
   <p><img src="2021-04-16.jpg" alt="Mavara Para" width="100" height="100"></p>
   <p>Mavara Para</p>
-  <p>Update 6.9 2K23 R2</p>
-  <p><code>Build 2306.30</code> <code>DonutOS Web 1.1 BB R2</code> <code>DHTMLK v23.06.27.256+</code></p>
+  <p>Update 7 2K23 R2</p>
+  <p><code>Build 2307.01 RTM</code> <code>DonutOS Web 1.1 BB R2</code> <code>DHTMLK v23.06.27.256+</code></p>
   <button type="button" class="collapsible">What's New?</button>
   <div class="content">
-    <p>1. Stable and preview released</p>
-    <p>2. Almost stable, there can be only a very few unimportant bugs</p>
+    <p>1. Fully stable</p>
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button>Check for Updates/Upgrades</button></a></p>
   <p>Developed by Gautham Nair</p>
