--- a/index.html
+++ b/index.html
@@ -4,6 +4,47 @@
 <title>Donut WebUI MP  | DonutOS Web 1.1 BB</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+  body, html {
+  height: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.bg-image {
+  /* The image used */
+  background-image: url("2021-04-16.jpg");
+
+  /* Add the blur effect */
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+
+  /* Full height */
+  height: 90%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* Position text in the middle of the page/image */
+.bg-text {
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 3px solid #f1f1f1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+}
   .collapsible {
   background-color: #777;
   color: white;
@@ -80,13 +121,16 @@ body {font-family: Arial;}
 <body>
 
 
-<div class="tab">
-  <p>📀<b>Donut</b>WebUI<sup>MP</sup></p>
+  <div class="bg-image"></div>
+
+
+  <div class="tab">
   <button class="tablinks" onclick="openMenu(event, 'Desktop')" id="defaultOpen">📀 Home</button>
   <button class="tablinks" onclick="openMenu(event, 'System')">System</button>
   <button class="tablinks" onclick="openMenu(event, 'Apps')">Apps</button>
 </div>
 
+<div class="bg-text">
 <div id="Desktop" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <span id="clock"></span>
@@ -99,11 +143,11 @@ body {font-family: Arial;}
   <h1>📀</h1><p><b>Donut</b>WebUI<sup>MP</sup></p>
   <p><img src="2021-04-16.jpg" alt="Mavara Para" width="100" height="100"></p>
   <p>Mavara Para</p>
-  <p>Update 7 2K23 R2</p>
-  <p><code>Build 2307.01 RTM</code> <code>DonutOS Web 1.1 BB R2</code> <code>DHTMLK v23.06.27.256+</code></p>
+  <p>2K23 R3</p>
+  <p><code>Build 2307.01 R3 DHTMLK v23.07.01.512+</code></p>
   <button type="button" class="collapsible">What's New?</button>
   <div class="content">
-    <p>1. Fully stable</p>
+    <p>1. Beautiful Desktop Experience</p>
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button>Check for Updates/Upgrades</button></a></p>
   <p>Developed by Gautham Nair</p>
@@ -114,7 +158,7 @@ body {font-family: Arial;}
   <h1>Apps</h1>
   <a style="text-decoration:none;" href="browser.html"> <button style="height:200px;width:200px"><h1>🌐</h1></button> </a> <a style="text-decoration:none;" href="games.html"> <button style="height:200px;width:200px"><h1>🎮</h1></button> </a> <a style="text-decoration:none;" href="copyv86.html"> <button style="height:200px;width:200px"><h1>🖥️</h1></button> </a>
 </div>
-
+</div>
 <script>
 function openMenu(evt, tabName) {
   var i, tabcontent, tablinks;
