--- a/browser.html
+++ b/browser.html
@@ -49,7 +49,7 @@
 <body style="font-family:Verdana;color:black;">
 
 <div style="background-color:white;padding:1px;text-align:left;">
-  <h1><a style="text-decoration:none;" href="index.html">⬅️</a> 🌐 Donut Browser<sup>MP</sup></h1>
+  <h1><a style="text-decoration:none;" href="index.html">⬅</a> 🌐 Donut Browser<sup>MP</sup></h1>
 </div>
 
 <script async src="https://cse.google.com/cse.js?cx=ee19ab206b28400bb">
