--- a/tetris.html
+++ b/tetris.html
@@ -22,7 +22,7 @@
   </style>
 </head>
 <body>
-  <h1><a style="text-decoration:none;" href="games.html">⬅️</a> Tetris</h1>
+  <h1><a style="text-decoration:none;" href="games.html">⬅</a> Tetris</h1>
 <canvas width="320" height="640" id="game"></canvas>
 <script>
 // https://tetris.fandom.com/wiki/Tetris_Guideline
