--- a/copyv86.html
+++ b/copyv86.html
@@ -49,7 +49,7 @@
 <body style="font-family:Verdana;color:black;">
 
 <div style="background-color:white;padding:1px;text-align:left;">
-  <h1><a style="text-decoration:none;" href="index.html">⬅️</a> 🖥️ Donut WVM<sup>MP</sup> (Copy v86)</h1>
+  <h1><a style="text-decoration:none;" href="index.html">⬅</a> 🖥️ Donut WVM<sup>MP</sup> (Copy v86)</h1>
 </div>
 
 <iframe src="https://copy.sh/v86/" width="100%" height="700" style="none">
