--- a/games.html
+++ b/games.html
@@ -71,7 +71,7 @@
 <body style="font-family:Verdana;color:black;">
 
 <div style="background-color:white;padding:1px;text-align:left;">
-  <h1><a style="text-decoration:none;" href="index.html">⬅️</a> 🎮 Games</h1>
+  <h1><a style="text-decoration:none;" href="index.html">⬅</a> 🎮 Games</h1>
 </div>
 
 <button type="button" class="collapsible">🧱 Tetris</button>
