--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 <title>Donut WebUI MP  | DonutOS Web 1.1 BB</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+  .btn {
+            cursor: pointer;
+            border: 1px solid #3498db;
+            background-color: transparent;
+            height: 200px;
+            width: 200px;
+            color: #3498db;
+            font-size: 1.5em;
+            box-shadow: 0 6px 6px rgba(0, 0, 0, 0.6);
+        }
   body, html {
   height: 100%;
 }
@@ -46,7 +56,7 @@
   text-align: center;
 }
   .collapsible {
-  background-color: #777;
+  background-color: transparent;
   color: white;
   cursor: pointer;
   padding: 18px;
@@ -65,7 +75,7 @@
   padding: 0 18px;
   display: none;
   overflow: hidden;
-  background-color: #f1f1f1;
+  background-color: transparent;
 }
 * {
   box-sizing: border-box;
@@ -144,10 +154,10 @@ body {font-family: Arial;}
   <p><img src="2021-04-16.jpg" alt="Mavara Para" width="100" height="100"></p>
   <p>Mavara Para</p>
   <p>2K23 R3</p>
-  <p><code>Build 2307.01 R3 DHTMLK v23.07.01.512+</code></p>
-  <button type="button" class="collapsible">What's New?</button>
+  <p><code>Build 2307.02 R3 DHTMLK v23.07.01.512+</code></p>
+  <button type="button" class="collapsible">What's New? 🔽</button>
   <div class="content">
-    <p>1. Beautiful Desktop Experience</p>
+    <p>1. Updated User Interface</p>
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button>Check for Updates/Upgrades</button></a></p>
   <p>Developed by Gautham Nair</p>
@@ -156,7 +166,7 @@ body {font-family: Arial;}
 <div id="Apps" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>Apps</h1>
-  <a style="text-decoration:none;" href="browser.html"> <button style="height:200px;width:200px"><h1>🌐</h1></button> </a> <a style="text-decoration:none;" href="games.html"> <button style="height:200px;width:200px"><h1>🎮</h1></button> </a> <a style="text-decoration:none;" href="copyv86.html"> <button style="height:200px;width:200px"><h1>🖥️</h1></button> </a>
+  <a style="text-decoration:none;" href="browser.html"> <button class="btn"><h1>🌐</h1></button> </a> <a style="text-decoration:none;" href="games.html"> <button class="btn"><h1>🎮</h1></button> </a> <a style="text-decoration:none;" href="copyv86.html"> <button class="btn"><h1>🖥️</h1></button> </a>
 </div>
 </div>
 <script>
