--- a/tt2d.html
+++ b/tt2d.html
@@ -11,7 +11,7 @@
   text-align: center;
 }</style>
 <body>
-    <h1><a style="text-decoration:none;" href="games.html">⬅️</a> Table Tennis 2D</h1>
+    <h1><a style="text-decoration:none;" href="games.html">⬅</a> Table Tennis 2D</h1>
     <canvas id="game" width="640" height="480"></canvas>
     <script>
         var canvas = document.getElementById("game");
