--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Donut WebUI MP  | DonutOS Web 1.1 BB</title>
+<title>Donut WebUI MP 2K23 R3</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
   .btn {
@@ -12,6 +12,14 @@
             width: 200px;
             color: #3498db;
             font-size: 1.5em;
+            box-shadow: 0 6px 6px rgba(0, 0, 0, 0.6);
+        }
+        .btn2 {
+            cursor: pointer;
+            border: 1px solid #3498db;
+            background-color: transparent;
+            color: #3498db;
+            font-size: 0.2.Sem;
             box-shadow: 0 6px 6px rgba(0, 0, 0, 0.6);
         }
   body, html {
@@ -59,10 +67,10 @@
   background-color: transparent;
   color: white;
   cursor: pointer;
-  padding: 18px;
+  padding: 10px;
   width: 30%;
   border: none;
-  text-align: left;
+  text-align: center;
   outline: none;
   font-size: 20px;
 }
@@ -159,7 +167,7 @@ body {font-family: Arial;}
   <div class="content">
     <p>1. Updated User Interface</p>
   </div>
-  <p><a style="text-decoration:none;" href="index.html"><button>Check for Updates/Upgrades</button></a></p>
+  <p><a style="text-decoration:none;" href="index.html"><button class="btn2">Check for Updates/Upgrades</button></a></p>
   <p>Developed by Gautham Nair</p>
 </div>
 
